# zll

./: .gitattributes  README.rst  meson.build
.github/workflows/: build.yml
docs/adr/: 0002-iterator-facade.md
docs/sherds/2023/2023-10/: 2023-10-13T17_05_55Z_post_HJOtakocHZZVtTha.md
include/zll/: cstdint.hpp  type_traits.hpp
include/zll/debug/: static_assert.hpp
include/zll/functional/: function_ref.hpp
include/zll/functional/detail/: bound_entity_type.hpp  fn_types.hpp
include/zll/memory/: address_of.hpp
include/zll/meta/: enable_if.hpp  integral_constant.hpp  is_arithmetic.hpp  is_array.hpp  is_class.hpp  is_enum.hpp  is_floating_point.hpp  is_integral.hpp  is_member_pointer.hpp  is_object.hpp  is_pointer.hpp  is_same.hpp  is_scalar.hpp  is_union.hpp  remove_cv.hpp  type_identity.hpp  type_traits.hpp
include/zll/meta/detail/: constraints_type.hpp
include/zll/meta/traits/: enable_if.hpp  is_arithmetic.hpp  is_array.hpp  is_class.hpp  is_const.hpp  is_enum.hpp  is_floating_point.hpp  is_function.hpp  is_integral.hpp  is_member_pointer.hpp  is_object.hpp  is_pointer.hpp  is_reference.hpp  is_same.hpp  is_scalar.hpp  is_union.hpp  remove_cv.hpp  remove_reference.hpp
include/zll/meta/types/: append.hpp  at.hpp  contains.hpp  conversion.hpp  index_of.hpp  push.hpp  remove.hpp  replace.hpp  size.hpp  typelist.hpp  typevector.hpp
include/zll/meta/types/typelist/: append.hpp  at.hpp  push.hpp  (+8 more)
include/zll/numeric/: ratio.hpp
include/zll/numeric/ratio/: arithmetic.hpp  comparsion.hpp  helper.hpp  overflow_helper.hpp  ratio_type.hpp
include/zll/utils/: attribute_macros.hpp  intrinsics_macros.hpp  macros.hpp  nontype.hpp  typeof_macro.hpp
tests/: meson.build
tests/libs/utest/: utest.h
tests/unit_tests/: main.cpp  meson.build
tests/unit_tests/functional/: function_ref_tests.cpp
tests/unit_tests/memory/: address_of_tests.cpp
tests/unit_tests/meta/: enable_if_tests.cpp  integral_constant_tests.cpp  is_arithmetic_tests.cpp  is_array_tests.cpp  is_class_tests.cpp  is_enum_tests.cpp  is_floating_point_tests.cpp  is_integral_tests.cpp  is_member_pointer_tests.cpp  is_object_tests.cpp  is_pointer_tests.cpp  is_same_tests.cpp  is_scalar_tests.cpp  is_union_tests.cpp  remove_cv_tests.cpp  type_identity_tests.cpp
tests/unit_tests/meta/traits/: enable_if_tests.cpp  is_arithmetic_tests.cpp  is_array_tests.cpp  is_class_tests.cpp  is_const_tests.cpp  is_enum_tests.cpp  is_floating_point_tests.cpp  is_function_tests.cpp  is_integral_tests.cpp  is_member_pointer_tests.cpp  is_object_tests.cpp  is_pointer_tests.cpp  is_same_tests.cpp  is_scalar_tests.cpp  is_union_tests.cpp  remove_cv_tests.cpp
tests/unit_tests/meta/types/: conversion_tests.cpp  typelist_tests.cpp  typevector_tests.cpp
tests/unit_tests/numeric/: ratio_tests.cpp
tools/: add_copyright.sh  add_copyright_all.sh
(+35 files in other folders)
